--- a/GaoSiMoHu/src/main/AndroidManifest.xml
+++ b/GaoSiMoHu/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowImageActivity" />
+        <activity
+            android:name=".ShowImageActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
